--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/react-dom": "18.2.6",
     "autoprefixer": "10.4.14",
     "cloudinary": "^2.3.1",
+    "clsx": "^2.1.1",
     "eslint": "8.44.0",
     "eslint-config-next": "13.4.9",
     "mic-recorder-to-mp3": "^2.2.2",
@@ -22,6 +23,7 @@
     "postcss": "8.4.25",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "tailwind-merge": "^2.4.0",
     "tailwindcss": "3.3.2",
     "tailwindcss-animate": "^1.0.6",
     "typescript": "5.1.6",
